--- a/anime-detail.html
+++ b/anime-detail.html
@@ -114,6 +114,7 @@
   <audio id="iz-ost" loop><source src="https://www.dropbox.com/scl/fi/ajz2nz6psxadglurd1om4/Izure-Saikyou-no-Renkinjutsushi-Opening-Full-TREASURE-by-DIALOGUE.mp3?rlkey=0fso7p0rl6rwcz5pj31fildzk&st=pxzfm5md&raw=1" type="audio/mpeg"></audio>
   <audio id="jj-ost" loop><source src="https://www.dropbox.com/scl/fi/o6tz1ztrrqt14fqdlhwjc/TV-2-OP-OP-King-Gnu-SPECIALZ-11-56-MBSTBS-28.mp3?rlkey=0720x38jv8mey8ux361mdt17e&st=8nwdxvhq&raw=1" type="audio/mpeg"></audio>
   <audio id="akame-ost" loop><source src="https://www.dropbox.com/scl/fi/zk69qocarilx6zuwto65x/akame-ga-kill-Opening-1-Full.mp3?rlkey=t474skov33gnlo751s88ehgip&st=aq8dksxr&raw=1" type="audio/mpeg"></audio>
+  <audio id="Demonslayer-ost" loop><source src="https://www.dropbox.com/scl/fi/x5fkwig7j4tsb1s1fybqp/Kimetsu-No-Yaiba-OP.1-Gurenge-Sub.-Espa-ol-Romaji-AMV.mp3?rlkey=14qprvf10rzoblirr4c0o0cyt&st=mnh4fsql&raw=1" type="audio/mpeg"></audio>
   <audio id="herox-ost" loop><source src="https://www.dropbox.com/scl/fi/qco7a2km0hx8b6pdor0sf/TO-BE-HERO-X-Ending-FULL-KONTINUUM-by-SennaRin-Lyrics.mp3?rlkey=ba7b47vkvcs7pfjh84fv33ann&st=r7dzkw7i&raw=1" type="audio/mpeg"></audio>
   <audio id="maou2099-ost" loop><source src="https://www.dropbox.com/scl/fi/4lt2eo48s332etw2tv1sn/Maou-2099-Opening-Full-Shiyui-Hollow.mp3?rlkey=alnrpw2xm1qpqxlwgxmv1jb18&st=pc8iwkyl&raw=1" type="audio/mpeg"></audio>
   <audio id="al-ost" loop><source src="https://www.dropbox.com/scl/fi/tuaxm8zttc83ymbn4bv2w/Alya-Sometimes-Hides-Her-Feelings-in-Russian-Opening-Ichiban-Kagayaku-Hoshi.mp3?rlkey=v2uqxurdgbojls9urj300h0z1&st=1mw6vpvg&raw=1" type="audio/mpeg"></audio>
@@ -865,6 +866,132 @@
               { title: "To Be Hero X T1 Cap 22"},
               { title: "To Be Hero X T1 Cap 23"},
               { title: "To Be Hero X T1 Cap 24"},
+            ]
+          }
+        ]
+      },
+      10: {
+        title: "Demon Slayer",
+        desc: "Estamos en la era Taisho de Japón. Tanjiro, un joven que se gana la vida vendiendo carbón, descubre un día que su familia ha sido asesinada por un demonio. Para empeorar las cosas, su hermana menor Nezuko, la única superviviente de la masacre, ha sufrido una transformación en demonio. Destrozado por los acontecimientos Tanjiro decide convertirse en un cazador de demonios para poder devolver a su hermana a la normalidad y matar al demonio que masacró a su familia.",
+        cover: "demon.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/42hfl90nzsi656lafcrt3/Demon-Slayer-T1.jpg?rlkey=rjizwszzaw7yk1ijp23ygurah&st=k1xk99zw&raw=1",
+            eps: [
+              { title: "Demon Slayer T1 Cap 1"},
+              { title: "Demon Slayer T1 Cap 2"},
+              { title: "Demon Slayer T1 Cap 3"},
+              { title: "Demon Slayer T1 Cap 4"},
+              { title: "Demon Slayer T1 Cap 5"},
+              { title: "Demon Slayer T1 Cap 6"},
+              { title: "Demon Slayer T1 Cap 7"},
+              { title: "Demon Slayer T1 Cap 8"},
+              { title: "Demon Slayer T1 Cap 9"},
+              { title: "Demon Slayer T1 Cap 10"},
+              { title: "Demon Slayer T1 Cap 11"},
+              { title: "Demon Slayer T1 Cap 12"},
+              { title: "Demon Slayer T1 Cap 13"},
+              { title: "Demon Slayer T1 Cap 14"},
+              { title: "Demon Slayer T1 Cap 15"},
+              { title: "Demon Slayer T1 Cap 15"},
+              { title: "Demon Slayer T1 Cap 16"},
+              { title: "Demon Slayer T1 Cap 17"},
+              { title: "Demon Slayer T1 Cap 18"},
+              { title: "Demon Slayer T1 Cap 19"},
+              { title: "Demon Slayer T1 Cap 20"},
+              { title: "Demon Slayer T1 Cap 21"},
+              { title: "Demon Slayer T1 Cap 22"},
+              { title: "Demon Slayer T1 Cap 23"},
+              { title: "Demon Slayer T1 Cap 24"},
+              { title: "Demon Slayer T1 Cap 25"},
+              { title: "Demon Slayer T1 Cap 26"},
+            ]
+          },
+          {
+            num: 2,
+	    name: "Película 1",
+            cover: "https://www.dropbox.com/scl/fi/2gpxn6o5gz54vbn3u2u7z/Demon-Slayer-Pelicula-1.jpg?rlkey=8qn7pm6o3jfeq0lnjaj1xv9rk&st=x62180e8&raw=1",
+            eps: [
+              { title: "Demon Slayer Película 1: El Tren Infinito"},
+            ]
+          },
+          {
+            num: 3,
+	    name: "Temporada 2",
+            cover: "https://www.dropbox.com/scl/fi/4d3m150tzzhxb3tswn90z/Demon-Slayer-T2.jpeg?rlkey=6x82tdvfwol55eimna1wtwq24&st=e673iluu&raw=1",
+            eps: [
+              { title: "Demon Slayer T2 Cap 1"},
+              { title: "Demon Slayer T2 Cap 2"},
+              { title: "Demon Slayer T2 Cap 3"},
+              { title: "Demon Slayer T2 Cap 4"},
+              { title: "Demon Slayer T2 Cap 5"},
+              { title: "Demon Slayer T2 Cap 6"},
+              { title: "Demon Slayer T2 Cap 7"},
+              { title: "Demon Slayer T2 Cap 8"},
+              { title: "Demon Slayer T2 Cap 9"},
+              { title: "Demon Slayer T2 Cap 10"},
+              { title: "Demon Slayer T2 Cap 11"},
+            ]
+          },
+          {
+            num: 4,
+	    name: "Película 2",
+            cover: "https://www.dropbox.com/scl/fi/szhj1hl8i7vqfw6fzpwsn/Demon-Slayer-Pelicula-2.jpg?rlkey=z2126pfg5ize3ux6lf2mr19tf&st=f8hzvj9l&raw=1",
+            eps: [
+              { title: "Demon Slayer Película 2: To the Swordsmith Village"},
+            ]
+          },
+          {
+            num: 5,
+	    name: "Temporada 3",
+            cover: "https://www.dropbox.com/scl/fi/2bh2sfcsj8g79qyxybp5h/Demon-Slayer-T3.jpg?rlkey=f2dg28acvd30m0grwbemzwkoc&st=ir9k5y6a&raw=1",
+            eps: [
+              { title: "Demon Slayer T3 Cap 1"},
+              { title: "Demon Slayer T3 Cap 2"},
+              { title: "Demon Slayer T3 Cap 3"},
+              { title: "Demon Slayer T3 Cap 4"},
+              { title: "Demon Slayer T3 Cap 5"},
+              { title: "Demon Slayer T3 Cap 6"},
+              { title: "Demon Slayer T3 Cap 7"},
+              { title: "Demon Slayer T3 Cap 8"},
+              { title: "Demon Slayer T3 Cap 9"},
+              { title: "Demon Slayer T3 Cap 10"},
+              { title: "Demon Slayer T3 Cap 11"},
+            ]
+          },
+          {
+            num: 6,
+	    name: "Película 3",
+            cover: "https://www.dropbox.com/scl/fi/ojq9woi8mm516pvpn73mn/Demon-Slayer-Pelicula-3.jpg?rlkey=jtd9xw1i3pyttoev0o9cdhkq3&st=c706zo9r&raw=1",
+            eps: [
+              { title: "Demon Slayer Película 3: To the Hashira Training"},
+            ]
+          },
+          {
+            num: 7,
+	    name: "Temporada 4",
+            cover: "https://www.dropbox.com/scl/fi/v9pxrs1jj8oc7wkavpnwo/Demon-Slayer-T4.jpg?rlkey=az1ppw4k6t1n9abhm6n7wbpog&st=cgalfnem&raw=1",
+            eps: [
+              { title: "Demon Slayer T4 Cap 1"},
+              { title: "Demon Slayer T4 Cap 2"},
+              { title: "Demon Slayer T4 Cap 3"},
+              { title: "Demon Slayer T4 Cap 4"},
+              { title: "Demon Slayer T4 Cap 5"},
+              { title: "Demon Slayer T4 Cap 6"},
+              { title: "Demon Slayer T4 Cap 7"},
+              { title: "Demon Slayer T4 Cap 8"},
+              { title: "Demon Slayer T4 Cap 9"},
+              { title: "Demon Slayer T4 Cap 10"},
+              { title: "Demon Slayer T4 Cap 11"},
+            ]
+          },
+          {
+            num: 8,
+	    name: "Película 4",
+            cover: "https://www.dropbox.com/scl/fi/ollpfsqskuvar6fg3zdza/Demon-Slayer-Pelicula-4.jpg?rlkey=trkr1eux9hwkpa1ryi7t3oxf8&st=0twpq5s7&raw=1",
+            eps: [
+              { title: "Demon Slayer Película 4: Castillo Infinito"},
             ]
           }
         ]
@@ -1780,12 +1907,12 @@
 
     // 5) Pausar todos los audios y reproducir OST al primer clic
     (function setupAudio(){
-      const audios = ['dd-ost','jj-ost','kb-music','rz-ost','mt-ost','ts-ost','st-ost','wi-ost','iz-ost','akame-ost','herox-ost','maou2099-ost','al-ost','ra-ost','ki-ost','gorila-ost','heroescudo-ost','ov-ost','shi-ost','goblinslayer-ost','aliester-ost','oni-ost','kaiju8-ost','zootopia-ost','Clevatess-ost','drstone-ost','onepieceliveaction-ost','sr-ost','Toyoureternity-ost','Tsugunaisubbed-ost','Shinsei Kourin-ost']
+      const audios = ['dd-ost','jj-ost','kb-music','rz-ost','mt-ost','ts-ost','st-ost','wi-ost','iz-ost','akame-ost','herox-ost','Demonslayer-ost','maou2099-ost','al-ost','ra-ost','ki-ost','gorila-ost','heroescudo-ost','ov-ost','shi-ost','goblinslayer-ost','aliester-ost','oni-ost','kaiju8-ost','zootopia-ost','Clevatess-ost','drstone-ost','onepieceliveaction-ost','sr-ost','Toyoureternity-ost','Tsugunaisubbed-ost','Shinsei Kourin-ost']
         .map(id => document.getElementById(id))
         .filter(el => el);
       audios.forEach(a => { a.pause(); a.currentTime = 0; });
 
-      const playMap = {1:'dd-ost',2:'jj-ost',3:'kb-music',4:'rz-ost',5:'mt-ost',6:'ts-ost',7:'st-ost',8:'akame-ost',9:'herox-ost',11:'maou2099-ost',12:'wi-ost',13:'iz-ost',14:'al-ost',15:'ra-ost',16:'ki-ost',17:'gorila-ost',19:'heroescudo-ost',20:'ov-ost',21:'shi-ost',22:'goblinslayer-ost',23:'aliester-ost',24:'oni-ost',25:'kaiju8-ost',26:'zootopia-ost',27:'Clevatess-ost',28:'drstone-ost',29:'onepieceliveaction-ost',30:'sr-ost',31:'Toyoureternity-ost',32:'Tsugunaisubbed-ost',37:'Shinsei Kourin-ost'};
+      const playMap = {1:'dd-ost',2:'jj-ost',3:'kb-music',4:'rz-ost',5:'mt-ost',6:'ts-ost',7:'st-ost',8:'akame-ost',9:'herox-ost',10:'Demonslayer-ost',11:'maou2099-ost',12:'wi-ost',13:'iz-ost',14:'al-ost',15:'ra-ost',16:'ki-ost',17:'gorila-ost',19:'heroescudo-ost',20:'ov-ost',21:'shi-ost',22:'goblinslayer-ost',23:'aliester-ost',24:'oni-ost',25:'kaiju8-ost',26:'zootopia-ost',27:'Clevatess-ost',28:'drstone-ost',29:'onepieceliveaction-ost',30:'sr-ost',31:'Toyoureternity-ost',32:'Tsugunaisubbed-ost',37:'Shinsei Kourin-ost'};
       if (playMap[id]) {
         document.addEventListener('click', ()=>{
           const a = document.getElementById(playMap[id]);
