--- a/video-player.html
+++ b/video-player.html
@@ -670,6 +670,39 @@
           "24": { link:'&raw=1', title:'To Be Hero X T1 Cap 24' },
         }
       },
+      "10": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/em3v1gcn5mp1ywm12mmx5/Demon-Slayer-T1-Cap-1.mp4?rlkey=2wb17s0l1sazvxva1a23qdzm5&st=o1wce3od&raw=1', title:'Demon Slayer T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/rggzerakjx7f22s0r29fe/Demon-Slayer-T1-Cap-2.mp4?rlkey=ttaxojhvd9df7xtfmwgcddln3&st=v21u2nek&raw=1', title:'Demon Slayer T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/kerzaqxkxyntw7ecy19vq/Demon-Slayer-T1-Cap-3.mp4?rlkey=84jqb5kjsxai3civjgsw5p49u&st=c2g6yfrn&raw=1', title:'Demon Slayer T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/9mlgej51rncghwr9i42mn/Demon-Slayer-T1-Cap-4.mp4?rlkey=bgkvhyyjy1nf8zv2z49olqf10&st=g5912w1u&raw=1', title:'Demon Slayer T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/m14f0iw4fwhwavgz99h28/Demon-Slayer-T1-Cap-5.mp4?rlkey=3uaprwn6xuzkwpiie66ew2gjy&st=e3dxttz4&raw=1', title:'Demon Slayer T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/wugaf3swa8gpdbgfx3tad/Demon-Slayer-T1-Cap-6.mp4?rlkey=svkpeqf74wf1x3gzhrd9e5t2l&st=xvt7se1x&raw=1', title:'Demon Slayer T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/71305ruydi998pvdxyfqi/Demon-Slayer-T1-Cap-7.mp4?rlkey=l8tbphwz5p8l1r5u7cek1t95x&st=d3i2kggz&raw=1', title:'Demon Slayer T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/6gv1b1yso8c8281hwo7z4/Demon-Slayer-T1-Cap-8.mp4?rlkey=gqdbocm51hzbrc2xzcyqen7yl&st=q9945zvn&raw=1', title:'Demon Slayer T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/otg6y1u2hzpdpfov6v8om/Demon-Slayer-T1-Cap-9.mp4?rlkey=tvzoqbnj9o4f2gdd55lhlp6le&st=2v0u1xjb&raw=1', title:'Demon Slayer T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/widzz9hv70drg3wme1sir/Demon-Slayer-T1-Cap-10.mp4?rlkey=fgudmt11vppmu4lhql4m3bucg&st=p3x6oq8i&raw=1', title:'Demon Slayer T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/xowzackq62aq32k1wb5xq/Demon-Slayer-T1-Cap-11.mp4?rlkey=683a3ir4q9k6085kw2dvb7bfq&st=cmnep7ng&raw=1', title:'Demon Slayer T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/2g7qbcl3oua769utu8xob/Demon-Slayer-T1-Cap-12.mp4?rlkey=5wsmwkfzu0ed891rt7wuwhb7x&st=26a6nktx&raw=1', title:'Demon Slayer T1 Cap 12' },
+          "13": { link:'https://www.dropbox.com/scl/fi/h03dlrj5fmupny5mq0i1v/Demon-Slayer-T1-Cap-13.mp4?rlkey=znq9g1czt3krpfy11bm8us1ex&st=p0olvb2o&raw=1', title:'Demon Slayer T1 Cap 13' },
+          "14": { link:'https://www.dropbox.com/scl/fi/t2faif1g3a0c58y89opw3/Demon-Slayer-T1-Cap-14.mp4?rlkey=1bk4vc199l0z8rouu1m1mrahd&st=90cmy5xv&raw=1', title:'Demon Slayer T1 Cap 14' },
+          "15": { link:'https://www.dropbox.com/scl/fi/h5c68g1efsalmln3lxoeb/Demon-Slayer-T1-Cap-15.mp4?rlkey=0v7ds1gd3yebiq46okcacoehr&st=z5mjc6oj&raw=1', title:'Demon Slayer T1 Cap 15' },
+          "16": { link:'https://www.dropbox.com/scl/fi/eg0fi7a1d9mvlckvvhaea/Demon-Slayer-T1-Cap-16.mp4?rlkey=83raj832gdxgmuetoxsrleks3&st=ap2w0r7m&raw=1', title:'Demon Slayer T1 Cap 16' },
+          "17": { link:'https://www.dropbox.com/scl/fi/lgv9dhz02zuhvluy5j2n7/Demon-Slayer-T1-Cap-17.mp4?rlkey=15lqtmepbuoov6ehsd3a99yft&st=0ootqn2x&raw=1', title:'Demon Slayer T1 Cap 17' },
+          "18": { link:'https://www.dropbox.com/scl/fi/hy025kbthazwz4ybgf8oi/Demon-Slayer-T1-Cap-18.mp4?rlkey=sc6rmcr3vr849sssuukryc4r7&st=opqxlsn3&raw=1', title:'Demon Slayer T1 Cap 18' },
+          "19": { link:'https://www.dropbox.com/scl/fi/he2lo83n08pc2pkx58wtr/Demon-Slayer-T1-Cap-19.mp4?rlkey=x13tzdv5go8x2095bnr7grmkl&st=vp2fh13r&raw=1', title:'Demon Slayer T1 Cap 19' },
+          "20": { link:'https://www.dropbox.com/scl/fi/zy55s3xmcfuq2fvwh6rpi/Demon-Slayer-T1-Cap-20.mp4?rlkey=qxolmjyxniig0rlp9rucyyl2k&st=4wq5kie2&raw=1', title:'Demon Slayer T1 Cap 20' },
+          "21": { link:'https://www.dropbox.com/scl/fi/80cd7u1h4tustzk9afm7s/Demon-Slayer-T1-Cap-21.mp4?rlkey=jswy04m0mk3t3eocr6xlw0be0&st=b425iawh&raw=1', title:'Demon Slayer T1 Cap 21' },
+          "22": { link:'https://www.dropbox.com/scl/fi/4ez485elqak1rngxqiioj/Demon-Slayer-T1-Cap-22.mp4?rlkey=f2ibfp3z2s0l21a4zth3ujbx5&st=7h5v4lya&raw=1', title:'Demon Slayer T1 Cap 22' },
+          "23": { link:'https://www.dropbox.com/scl/fi/cj0ashjp2aulbdc50hee0/Demon-Slayer-T1-Cap-23.mp4?rlkey=2n8rwptjmvso69eewhkvr67xm&st=xecpf5qn&raw=1', title:'Demon Slayer T1 Cap 23' },
+          "24": { link:'https://www.dropbox.com/scl/fi/j89gy3vkdf0cf6bopotdc/Demon-Slayer-T1-Cap-24.mp4?rlkey=rvy9z7kocbklucv4wy9j0tj2w&st=i2ryxxax&raw=1', title:'Demon Slayer T1 Cap 24' },
+          "25": { link:'https://www.dropbox.com/scl/fi/m97ldt9vwnkg81idgwyi1/Demon-Slayer-T1-Cap-25.mp4?rlkey=uw9tbkyilxgopxho738nvaczc&st=8v6vonl4&raw=1', title:'Demon Slayer T1 Cap 25' },
+          "26": { link:'https://www.dropbox.com/scl/fi/4vtwvsi8je3wh7ohwlkyr/Demon-Slayer-T1-Cap-26.mp4?rlkey=edade2x3jlmpq62tzwyc06z1s&st=tbd1fpae&raw=1', title:'Demon Slayer T1 Cap 26' },
+        },
+        "2": {
+          "1": { link:'https://www.dropbox.com/scl/fi/rszhbgyi24v6czvly276n/Demon-Slayer-Pel-cula-1-El-Tren-Infinito.mp4?rlkey=bfslbid9ps4x2dvgpukiuoy83&st=hmguvx3q&raw=1', title:'Demon Slayer Película 1: El Tren Infinito' },
+        }
+      },
       "11": {
         "1": {
           "1": { link:'https://www.dropbox.com/scl/fi/wx64lxnl8gh9pgp1sl51m/Maou-2099-Capitulo-1.mp4?rlkey=2atk6expy8fu505fg57g8wkpl&st=8s7yjq63&raw=1', title:'Maou 2099 T1 Cap 1' },
