--- a/video-player.html
+++ b/video-player.html
@@ -1142,7 +1142,7 @@
           "17": { link:'https://www.dropbox.com/scl/fi/kdm5chgbflv4ne2eh9yhn/Dr.-Stone-Temporada-4-Capitulo-17.mp4?rlkey=g24438qveahtq1rkvi3s5gxd6&st=wvu7l5xr&raw=1', title:'Dr. Stone T4 Cap 17' },
           "18": { link:'https://www.dropbox.com/scl/fi/yvhscbmobhkm1llpdovmv/Dr.-Stone-Temporada-4-Capitulo-18.mp4?rlkey=frkoj8sj3zd5oamgu1iivho6o&st=8itmbong&raw=1', title:'Dr. Stone T4 Cap 18' },
           "19": { link:'https://www.dropbox.com/scl/fi/p7zypzyp7j7p4dh7ltdro/Dr.-Stone-Temporada-4-Capitulo-19.mp4?rlkey=oewatrsjovz67r61t032agk6b&st=zcber1o6&raw=1', title:'Dr. Stone T4 Cap 19' },
-          "20": { link:'&raw=1', title:'Dr. Stone T4 Cap 20' },
+          "20": { link:'https://www.dropbox.com/scl/fi/arvrks4qr0yiynryb2vdb/Dr.-Stone-Temporada-4-Capitulo-20.mp4?rlkey=01skdvehz6eevtfkmbxwo4df4&st=glsu1w6u&raw=1', title:'Dr. Stone T4 Cap 20' },
           "21": { link:'&raw=1', title:'Dr. Stone T4 Cap 21' },
           "22": { link:'&raw=1', title:'Dr. Stone T4 Cap 22' },
         }
