--- a/video-player.html
+++ b/video-player.html
@@ -213,6 +213,7 @@
           "6": { link:'https://www.dropbox.com/scl/fi/7aini8cfrjrlv3fh9zd06/DAN-DA-DAN-T2-Cap-6.mp4?rlkey=hsf5o8o506kegfhlpocu1mffn&st=rzebnlkt&raw=1', title:'DAN DA DAN T2 Cap 6' },
           "7": { link:'https://www.dropbox.com/scl/fi/7dahj8mn95vjqxpdkoqua/DAN-DA-DAN-T2-Cap-7.mp4?rlkey=94i1osas780y0d7ipvgu0x7j2&st=5tk1fa0o&raw=1', title:'DAN DA DAN T2 Cap 7' },
           "8": { link:'https://www.dropbox.com/scl/fi/bsyg38ktp14z17ef1xgco/DAN-DA-DAN-T2-Cap-8.mp4?rlkey=q2ors3ape1yj7nurdq2nrzezv&st=05hi1o7l&raw=1', title:'DAN DA DAN T2 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/guubes1mt50g1sih7ar90/DAN-DA-DAN-T2-Cap-9.mp4?rlkey=yvlgc6b461rgjkrt6qfuziekz&st=xq00noto&raw=1', title:'DAN DA DAN T2 Cap 9' },
         }
       },
       "2": {
