--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </button>
 
     <button id="tiktok-btn" type="button" aria-label="Abrir TikTok en nueva pestaña"
-            onclick="openInNewTab('')">
+            onclick="openInNewTab('https://www.tiktok.com/@archinime?_t=ZS-8zGoKE4IqLw&_r=1')">
       <img src="tiktok.jpg" alt="TikTok">
     </button>
 
